--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "dependencies": {
     "react": "16.4.1",
     "react-native": "0.56.0",
+    "react-native-linear-gradient": "^2.4.2",
     "react-native-navigation": "^1.1.484",
-    "react-native-vector-icons": "^5.0.0"
+    "react-native-vector-icons": "^5.0.0",
+    "prop-types": "latest"
   },
   "devDependencies": {
     "babel-jest": "23.4.2",
