--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "prop-types": "latest",
     "react": "16.4.1",
     "react-native": "0.56.0",
     "react-native-linear-gradient": "^2.4.2",
-    "react-native-navigation": "^1.1.484",
+    "react-native-navigation": "^2.0.2514",
     "react-native-vector-icons": "^5.0.0",
-    "prop-types": "latest"
+    "redux": "^4.0.0",
+    "redux-immutable-state-invariant": "^2.1.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-jest": "23.4.2",
@@ -22,5 +26,10 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "rnpm": {
+    "assets": [
+      "./assets/fonts"
+    ]
   }
 }
